# quarto-cli-pypi

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py  version.txt
.github/workflows/: publish.yml
quarto/: quarto.py
quarto_cli/: quarto.py
